Update documentation following new component

--- a/docs/api/classes/_components_base_.component.html
+++ b/docs/api/classes/_components_base_.component.html
@@ -85,6 +85,9 @@
 								<a href="_components_label_.label.html" class="tsd-signature-type">Label</a>
 							</li>
 							<li>
+								<a href="_components_rect_.rect.html" class="tsd-signature-type">Rect</a>
+							</li>
+							<li>
 								<a href="_components_slider_button_.sliderbutton.html" class="tsd-signature-type">SliderButton</a>
 							</li>
 							<li>
@@ -114,6 +117,9 @@
 						<a href="../modules/_components_label_.html">"components/label"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_components_rect_.html">"components/rect"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_components_slider_button_.html">"components/slider_<wbr>button"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -124,6 +130,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_types_styles_.html">"types/styles"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_util_color_.html">"util/color"</a>
 					</li>
 				</ul>
 			</nav>
